# x402-tron-demo

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  ARCHITECTURE.md  CLIENT.md  Dockerfile  FACILITATOR.md  LICENSE.md  README.md  SERVER.md  build_docker.sh  docker-compose.yml  requirements.txt  start.sh  start_docker.sh  stop_docker.sh
client-terminal/: README.md  main.py  start.sh
client-web/: package.json
client-web/src/utils/: payment.ts
client/python/: main.py
client/terminal/: main.py  pyproject.toml
client/typescript/: package-lock.json  package.json  tsconfig.json
client/typescript/scripts/: install-sdk.sh
client/typescript/src/: main.ts
client/web/: package-lock.json  package.json
client/web/src/components/: PaymentCard.tsx
client/web/src/utils/: payment.ts
docker/: entrypoint.sh  nginx.conf  supervisord.conf
facilitator/: .env.example  main.py  requirements.txt  start.sh
server/: main.py  pyproject.toml  requirements.txt  start.sh
